# microsoft-agent-framework-geekacademy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azuredeploy.json  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: evaluation.yml
a2a_demo/: client.py  server.py
api/: server.py
evaluation/: ci.py  dataset.jsonl  run.py
frontend/: index.html
pipeline/: agents.py  config.py  content-pipeline.yaml  main.py  memory.py  publish.py  tools.py  tracing.py  workflow.py
prompts/: __init__.py  pipeline_message.txt  researcher.txt  reviewer.txt  writer.txt
