[project]
name = "geektime-maf-poc"
version = "0.1.0"
description = "Microsoft Agent Framework POC - Multi-Agent Content Pipeline with MCP"
requires-python = ">=3.10"
dependencies = [
    "agent-framework[azure]",
    "agent-framework-a2a",
    "a2a-sdk[http-server]",
    "azure-identity",
    "azure-monitor-opentelemetry",
    "opentelemetry-sdk",
    "python-dotenv",
    "uvicorn",
    "azure-ai-evaluation",
]

[project.scripts]
start = "pipeline.main:run"
